--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,10 @@ provider:
   name: aws
   runtime: nodejs10.x
   region: ap-southeast-2
+  usagePlan:
+    throttle:
+      burstLimit: 5
+      rateLimit: 1
   
 resources:
   Resources: 
