--- a/serverless.yml
+++ b/serverless.yml
@@ -32,7 +32,7 @@ resources:
         AuthorizerUri:
           Fn::Join:
             - ''
-            - 
+            -
               - 'arn:aws:apigateway:'
               - Ref: "AWS::Region"
               - ':lambda:path/2015-03-31/functions/'
@@ -61,8 +61,6 @@ resources:
 
     apiGatewayRestApiAuthorizer:
       Value:
-        Fn::GetAtt:
-          - ClientAuthorizerLambdaFunction 
-          - Arn 
+        Ref: ApiGatewayAuthorizer
       Export:
         Name: ${self:custom.apiGatewayName}-authorizer
