--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -22,3 +22,5 @@ jobs:
           npm i serverless -g
           serverless config credentials --provider aws --key ${{ secrets.AWS_ACCESS_KEY_ID }} --secret ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           serverless deploy
+        env:
+          JWT_SIGNING_KEY: ${{ secrets.JWT_SIGNING_KEY }}
