--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,8 @@ provider:
   name: aws
   region: ap-southeast-2
   stage: ${opt:stage, 'dev'}
+  environment:
+    JWT_SIGNING_KEY: ${env:JWT_SIGNING_KEY}
   
 custom:
   apiGatewayName: ApiGateway-${self:provider.stage}
