Carry over pipeline artifacts

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,6 +7,8 @@ pipelines:
           name: Build
           script:
             - npm i --production
+          artifacts:
+            - node_modules/**
       - step:
           name: Deploy
           script:
