--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,9 +9,20 @@ pipelines:
             - npm i --production
           artifacts:
             - node_modules/**
+
       - step:
-          name: Deploy
+          name: Deploy to staging
           script:
             - npm i serverless -g
             - serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY
-            - serverless deploy
+            - serverless deploy --stage dev
+
+      - step:
+          name: Deploy to production
+          trigger: manual
+          script:
+            - cp config.yml.dist config.yml
+            - echo "\${ssm:/aws/reference/secretsmanager/prod/microservice/config~true}" > ./config.yml
+            - npm i serverless -g
+            - serverless config credentials --provider aws --key $AWS_ACCESS_KEY_ID --secret $AWS_SECRET_ACCESS_KEY
+            - serverless deploy --stage prod
