--- a/serverless.yml
+++ b/serverless.yml
@@ -4,6 +4,8 @@ provider:
   name: aws
   region: ap-southeast-2
   stage: ${opt:stage, 'dev'}
+  apiGateway:
+    description: Reusable API gateway and authorizer
   environment:
     JWT_SIGNING_KEY: ${env:JWT_SIGNING_KEY}
   
@@ -16,28 +18,16 @@ functions:
     handler: handler.clientAuthorizer
     cors: true
 
+  versionOne:
+    handler: versionOne.get
+    events:
+      - http:
+          path: v1
+          method: get
+          cors: true
+
 resources:
   Resources:
-
-    # API gateway
-    # - Our reusable API gateway for our individual services managed in their own repositories.
-    ApiGateway:
-      Type: AWS::ApiGateway::RestApi
-      Properties: 
-        Name: ${self:custom.apiGatewayName}
-        Tags:
-          -
-            Key: Environment
-            Value: ${self:provider.stage}
-
-    # API gateway resource versions
-    # - We create a resource instead of the serverless function/event http so that another API gateway is not created.
-    ApiGatewayResourceVersionOne:
-      Type: AWS::ApiGateway::Resource
-      Properties: 
-        ParentId: { "Fn::GetAtt": [ "ApiGateway", "RootResourceId" ] }
-        PathPart: v1
-        RestApiId: { Ref: ApiGateway }
     
     # API gateway authorizer
     # - Our reusable authorizer which we will attach to our API gateway. We will reference the API gateway using the key/name from the "ApiGateway" resource above.
@@ -57,30 +47,56 @@ resources:
         IdentitySource: method.request.header.Authorization
         IdentityValidationExpression: "Bearer .+"
         Name: ${self:custom.apiGatewayaAuthorizerName}
-        RestApiId: { Ref: ApiGateway }
+        RestApiId: { Ref: ApiGatewayRestApi }
         Type: TOKEN
+
+    ApiGatewayAuthorizerPermission:
+      Type: AWS::Lambda::Permission
+      Properties:
+        Action: lambda:InvokeFunction
+        FunctionName:
+          Fn::GetAtt: ClientAuthorizerLambdaFunction.Arn
+        Principal: "apigateway.amazonaws.com"
+        SourceArn: {
+            Fn::Join : [
+              "",
+              [
+                "arn:aws:execute-api:",
+                { Ref: "AWS::Region" },
+                ":",
+                { Ref: "AWS::AccountId" },
+                ":",
+                { Ref: ApiGatewayRestApi },
+                "/authorizers/",
+                { Ref: ApiGatewayAuthorizer }
+              ]
+            ]
+          }
+
             
   Outputs:
 
     # API gateway outputs
     apiGatewayRestApiId:
       Value:
-        Ref: ApiGateway 
+        Ref: ApiGatewayRestApi 
       Export:
         Name: ${self:custom.apiGatewayName}-restApiId 
        
     apiGatewayRestApiRootResourceId: 
       Value:
         Fn::GetAtt:
-          - ApiGateway 
+          - ApiGatewayRestApi 
           - RootResourceId 
       Export:
         Name: ${self:custom.apiGatewayName}-rootResourceId
 
     # API gateway resources
+    # - The ref is a combination of "ApiGatewayResource" and "path" with the first letter being capital.
+    # - For example, ApiGatewayResource{NormalizedPath - v1} for the authorizer would be "ApiGatewayResourceV1"
     apiGatewayRestApiVersionOneResourceId:
       Value:
-        Ref: ApiGatewayResourceVersionOne
+        Ref: ApiGatewayResourceV1
       Export:
         Name: ${self:custom.apiGatewayName}-versionOneResourceId
 
