Updated path to version lambda

--- a/serverless.yml
+++ b/serverless.yml
@@ -19,7 +19,7 @@ functions:
     cors: true
 
   versionOne:
-    handler: src/handlers/versionOne.get
+    handler: src/handlers/version.versionOne
     events:
       - http:
           path: v1
