--- a/serverless.yml
+++ b/serverless.yml
@@ -74,6 +74,53 @@ resources:
             ]
           }
 
+    # Table: InternalTenantsTable
+    # ===========================
+    # - Stores tenant name and database mapping
+    InternalTenantsTable:
+      Type: AWS::DynamoDb::Table
+      Properties:
+        TableName: internal_tenants
+        AttributeDefinitions:
+          -
+            AttributeName: tenant_name
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: tenant_name
+            KeyType: HASH
+            
+    # Table: InternalServiceDocsTable
+    # ===============================
+    # - Stores service documentation
+    InternalServiceDocsTable:
+      Type: AWS::DynamoDb::Table
+      Properties:
+        TableName: internal_service_docs
+        AttributeDefinitions:
+          -
+            AttributeName: service_name_version
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: service_name_version
+            KeyType: HASH
+            
+    # Table: InternalServicePoliciesTable
+    # ===============================
+    # - Stores service policies
+    InternalServicePoliciesTable:
+      Type: AWS::DynamoDb::Table
+      Properties:
+        TableName: internal_service_policies
+        AttributeDefinitions:
+          -
+            AttributeName: service_name_version
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: service_name_version
+            KeyType: HASH
             
   Outputs:
 
