--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -4,16 +4,14 @@ pipelines:
   branches: 
     master:
       - step:
-          name: Test
+          name: Test and build
           script:
             - npm i
             - npm run test
-
-      - step:
-          name: Build
-          script:
+            - rm -rf node_modules
             - npm i --production
           artifacts:
+            - dist/**
             - node_modules/**
 
       - step:
