--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.9.1",
     "jest": "^24.9.0",
+    "serverless-domain-manager": "^4.1.1",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3"
