--- a/serverless.yml
+++ b/serverless.yml
@@ -1,5 +1,8 @@
 service: api-gateway
 
+plugins:
+  - serverless-domain-manager
+
 provider:
   name: aws
   region: ap-southeast-2
@@ -12,6 +15,11 @@ provider:
 custom:
   apiGatewayName: ApiGateway-${self:provider.stage}
   apiGatewayaAuthorizerName: ClientAuthorizer-${self:provider.stage}
+  customDomain:
+    domainName: 'api.itsjeffro.com'
+    basePath: ''
+    stage: ${self:provider.stage}
+    createRoute53Record: true
 
 package:
   individually: false
