--- a/serverless.yml
+++ b/serverless.yml
@@ -31,7 +31,8 @@ package:
     - ./**
     - '!node_modules/**'
     - 'node_modules/aws-sdk/**'
-  
+    - 'node_modules/serverless-domain-manager/**'
+
 functions:
   clientAuthorizer:
     handler: dist/handlers/authorizer.auth
