--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "description": "",
   "scripts": {
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "build": "tsc",
     "watch": "tsc --watch"
   },
