--- a/serverless/resources/dynamodb/tenants.yml
+++ b/serverless/resources/dynamodb/tenants.yml
@@ -1,19 +1,20 @@
 # Table: InternalTenantsTable
 # ===========================
 # - Stores tenant name and database mapping
-resource:
-  InternalTenantsTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: internal_tenants-${self:provider.stage}
-      AttributeDefinitions:
-        -
-          AttributeName: tenant_name
-          AttributeType: S
-      KeySchema:
-        -
-          AttributeName: tenant_name
-          KeyType: HASH
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
+resources:
+  Resources:
+    InternalTenantsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: internal_tenants-${self:provider.stage}
+        AttributeDefinitions:
+          -
+            AttributeName: tenant_name
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: tenant_name
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 6
+          WriteCapacityUnits: 6
