--- a/serverless/resources/dynamodb/service-docs.yml
+++ b/serverless/resources/dynamodb/service-docs.yml
@@ -1,19 +1,20 @@
 # Table: InternalServiceDocsTable
 # ===============================
 # - Stores service documentation
-resource:
-  InternalServiceDocsTable:
-    Type: AWS::DynamoDB::Table
-    Properties:
-      TableName: internal_service_docs-${self:provider.stage}
-      AttributeDefinitions:
-        -
-          AttributeName: service_name_version
-          AttributeType: S
-      KeySchema:
-        -
-          AttributeName: service_name_version
-          KeyType: HASH
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
+resources:
+  Resources:
+    InternalServiceDocsTable:
+      Type: AWS::DynamoDB::Table
+      Properties:
+        TableName: internal_service_docs-${self:provider.stage}
+        AttributeDefinitions:
+          -
+            AttributeName: service_name_version
+            AttributeType: S
+        KeySchema:
+          -
+            AttributeName: service_name_version
+            KeyType: HASH
+        ProvisionedThroughput:
+          ReadCapacityUnits: 6
+          WriteCapacityUnits: 6
