--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   },
   "dependencies": {
     "aws-sdk": "^2.639.0",
-    "bcrypt": "^5.0.0",
+    "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "serverless-domain-manager": "^4.1.1",
     "serverless-dotenv-plugin": "^2.4.2"
