Fixed reserved names used in table

--- a/serverless/resources/dynamodb/api-keys.yml
+++ b/serverless/resources/dynamodb/api-keys.yml
@@ -9,11 +9,11 @@ resources:
         TableName: internal_api_keys-${self:provider.stage}
         AttributeDefinitions:
           -
-            AttributeName: key
+            AttributeName: identifier_key
             AttributeType: S
         KeySchema:
           -
-            AttributeName: key
+            AttributeName: identifier_key
             KeyType: HASH
         ProvisionedThroughput:
           ReadCapacityUnits: 5
