--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/jsonwebtoken": "^8.3.8",
     "@types/node": "^13.9.1",
     "jest": "^24.9.0",
+    "serverless-offline": "^6.4.0",
     "ts-jest": "^25.2.1",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.3"
